src/test/pass/plain_static_calls.ly
class AA() {  }

string::concat("a", "b")
AA::new()
